# converter

backend/: .gitignore  pyproject.toml  requirements.txt
backend/src/converter/: main.py
backend/src/converter/api/: router.py
backend/src/converter/api/handlers/: exceptions.py  upload_handler.py
backend/src/converter/core/: config.py  connection.py  interface.py  validators.py
backend/src/converter/dependencies/: db_dep.py  exceptions.py  security_dep.py  upload_dep.py
backend/src/converter/middlewares/: response_time.py
backend/src/converter/models/: migrate.py  user_model.py
backend/src/converter/security/: exceptions.py  token_bearer.py
backend/src/converter/services/: file_service.py
frontend/: index.html  index.js  login.html  login.js
